# zLLM

./: .pre-commit-config.yaml  .ruff.toml  brightdata.py  crawl_categories_all.txt  crawl_categories_stats.txt  crawl_content_log.txt  crawl_log_all.txt  crawl_log_stats.txt  fix_formatting.sh  list_final_URLs_all.txt  list_final_URLs_stats.txt  pyproject.toml  sample-crawled-page-type-1.txt  sample-crawled-page-type-2.txt  sample-crawled-page-type-3.txt  stopwords.txt  tor_crawling.py  utf_map.txt
xLLM/: .coverage  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  README_DATA_WORKFLOW.md  README_VERIFICATION.md  pyproject.toml  verification_report_20250309_131746.md
xLLM/data/: compressed_word2_hash.txt
xLLM/data/enterprise/: backend_dictionary.txt  backend_hash_ID.txt  backend_hash_context2.txt  backend_sorted_ngrams.txt
xLLM/data/knowledge/: arr_url.txt  compressed_ngrams_table.txt  dictionary.txt  hash_category.txt  hash_related.txt  hash_see.txt  knowledge_base.pkl  stopwords.txt  url_map.txt  word_hash.txt  xllm_dictionary.txt  xllm_hash_see.txt
xLLM/data/knowledge/nvidia/: .!45779!backend_hash_context3.txt  .!45785!backend_hash_context2.txt  .!45825!backend_hash_unstem.txt  .!45830!backend_hash_agents.txt  backend_ID_size.txt
xLLM/data/knowledge/test/: arr_url.txt  compressed_ngrams_table.txt  dictionary.txt  embeddings.txt  hash_category.txt  hash_related.txt  hash_see.txt  knowledge_base.pkl  ngrams_table.txt  url_map.txt  word_hash.txt
xLLM/data/logs/: verification_report.txt
xLLM/data/processed/: PDF_Chunking_Input_Nvidia_processed.json
xLLM/data/processed/pdfs/: xllm-enterprise_processed.json
xLLM/docs/api/examples/: comprehensive_kb_example.py  direct_kb_example.py  simple_kb_example.py
xLLM/docs/diagrams/: data-workflow.mermaid
xLLM/examples/: basic_usage.py  cli_usage.py  comprehensive_kb_example.py  direct_kb_example.py
xLLM/scripts/: add_pdf_to_kb.py  build_enterprise_kb.py  build_knowledge_base.py  build_taxonomy.py  crawl_wolfram.py  migrate_xllm6_to_xllm.py  process_enterprise_pdf.py  process_pdf.py  query_enterprise_kb.py  query_knowledge_base.py  setup_dev_env.sh  test_queries.txt  verify_xllm.py  verify_xllm_vs_xllm6.py
xLLM/src/xllm/: __init__.py  __main__.py
xLLM/src/xllm/cli/: __init__.py  main.py
xLLM/src/xllm/core/: __init__.py
xLLM/tests/: conftest.py
xLLM/tests/test_crawlers/: test_wolfram_crawler.py
xLLM/tests/test_enterprise/: __init__.py  test_pdf_processor.py
xLLM/tests/test_knowledge_base/: test_hash_knowledge_base.py
xLLM/tests/test_taxonomy/: __init__.py  test_taxonomy_builder.py
xLLM/tests/test_utils/: test_version.py
xLLM/tests/unit/: conftest.py
(+164 files in other folders)
