[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xllm"
version = "0.1.0"
description = "A modular knowledge extraction and query system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rob Ford", email = "me@robandrewford.com"},
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "pymupdf>=1.21.0",
    "autocorrect>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocstrings>=0.19.0",
]
nlp = [
    "pattern>=3.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]
ignore = ["ANN101"]  # Missing type annotation for `self`

[tool.ruff.lint.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xllm"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/xllm",
    "tests",
    "pyproject.toml",
    "README.md",
]

[tool.hatch.build.targets.wheel.shared-data]
"src/xllm/py.typed" = "xllm/py.typed"
