[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xllm"
version = "0.1.0"
description = "A modular knowledge extraction and query system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rob Ford", email = "me@robandrewford.com"},
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "pymupdf>=1.21.0",
    "autocorrect>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocstrings>=0.19.0",
]
nlp = [
    "pattern>=3.6.0",
]

[project.scripts]
xllm = "xllm.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]
ignore = ["ANN101"]  # Missing type annotation for `self`

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
include = ["src", "scripts", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
